Date/Time						What happened

March 1 2016 4:03PM                                     Added README.txt
March 1 2016 4:02PM                                     Added changelog.txt